# Calculator

./: .gitignore  CMakeLists.txt  README.md  cp_files_to_evaluation.sh  main.cpp
.github/workflows/: cmake-single-platform.yml
Calculator/include/: Calculator.h  Exceptions.h  InputConverter.h  InputReader.h  Symbol.h
Calculator/src/: Calculator.cpp  InputConverter.cpp  InputReader.cpp  Symbol.cpp
Calculator/tests/: CalculatorTest.cpp  InputConverterTest.cpp  InputReaderTest.cpp  SymbolTest.cpp
DataStructures/include/: List.h  Queue.h  Stack.h  String.h
DataStructures/src/: String.cpp
DataStructures/tests/: ListTest.cpp  QueueTest.cpp  StackTest.cpp  StringTest.cpp
InputOutput/include/: ConsoleLogger.h  Logger.h  LoggerStub.h  UserInputReader.h  UserInputReaderImpl.h  UserInputReaderStub.h
InputOutput/src/: ConsoleLogger.cpp  LoggerStub.cpp  UserInputReaderImpl.cpp  UserInputReaderStub.cpp
